[package]
name = "polymer"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.19.1"
log = "0.4.6"

[dependencies.cairo-rs]
version = "0.6.0"
# We don't need glib
default-features = false

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.6"
cocoa = "0.18.4"

