[package]
name = "polymer"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.20.0"
log = "0.4.6"
dirs = "2.0.1"
pretty_env_logger = "0.3.0"

[dependencies.rlua]
version = "0.17.0"
default-features = false
# Let's us load lgi
features = ["system-lua"]

[dependencies.cairo-rs]
version = "0.8.0"
# We don't need glib
default-features = false

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.6"
cocoa = "0.20.0"
core-graphics = "0.19.0"
